CIRC-2295: respect tenant timezone in circulation log records